# FilesTalk

backend/: Dockerfile  README.md  compose.yaml  create_superuser.sh  llm_compare.py  pyproject.toml  pytest.ini
backend/api/: admin.py  decorators.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/api/management/commands/: create_user.py
backend/batch_processing/: main.py
backend/config/: settings.py  urls.py
backend/test_tool/: README.md  main_test_tool.py  main_test_tool_api.py  main_test_tool_api_v5.py  requirements.txt
backend/utils/: batch_statistics.py  config.py  constants.py  multilingual_e5_large_embeddings.py  utils.py
